Wrap generated code in try catch to prevent unnecessary errors

--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,11 @@ html, body {
   padding: 0;
 }
 
+body {
+  font-family: sans-serif;
+  padding: 1em;
+}
+
 .CodeMirror {
   min-width: 100%;
   height: 100%;
@@ -32,14 +37,6 @@ html, body {
   border-bottom: 1px solid #d0d0d0;
 }
 button { font-size: 15px; }
-
-.row {
-  height: 90vh;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 40% 60%;
-  grid-auto-flow: row;
-}
 
 .generated {
   padding: 1em;
@@ -78,7 +75,12 @@ button { font-size: 15px; }
 }
 
 .editor-area {
-  display: flex;
+  height: 90vh;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 40% 60%;
+  grid-auto-flow: row;
+  width: 100%;
 }
 
 .editor {
